# nlp-labs

./: README.md  lab-1.ipynb  pyproject.toml
