[tool.poetry]
name = "nlp-labs"
version = "0.1.0"
description = ""
authors = ["Tomas Sanchez <tosanchez@frba.utn.edu.ar>"]
readme = "README.md"
packages = [{ include = "nlp_labs" }]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
jupyterlab = "^4.0.8"
notebook = "^7.0.6"
pydantic = "^2.4.2"
scikit-learn = "^1.3.2"
pandas = "^2.1.3"
nltk = "^3.8.1"
matplotlib = "^3.8.1"
seaborn = "^0.13.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
